BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_TimeSlotsForDispatchSchedular__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores the possible time slots for the Dispatch Scheduler calendar</description>
    <fields>
        <fullName>NameOfSlot__c</fullName>
        <description>Enter name of the slot to be displayed on UI. Leave blank if no slot name needs to be displayed.</description>
        <label>NameOfSlot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlotCode__c</fullName>
        <description>Code used by external system to identify the slot</description>
        <label>Slot Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeSlot__c</fullName>
        <description>Stores the time slot</description>
        <label>TimeSlot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TimeSlotsForDispatchSchedular</label>
</CustomObject>